# group4-opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  opengl_dodecahedron.cpp  opengl_dodecahedron.h
